# argusvision

./: .gitignore  CHANGELOG.md  README.md  argusvision.py  dev.py  pyproject.toml  sonar-project.properties
.github/workflows/: code-quality.yml
engine/: __init__.py  hand_engine.py  renderer.py
logic/: __init__.py  utils.py
logic/gestures/: hands.py
scripts/: dev.py
src/argusvision/: main.py
src/argusvision/engine/: __init__.py  hand_engine.py  models.py  renderer.py
src/argusvision/logic/: config.py
src/argusvision/logic/gestures/: hands.py
src/argusvision/ui/: dashboard.py
src/argusvision/views/: Main.qml  bridge.py
src/argusvision/views/components/: AppTheme.qml  BaseFrame.qml  GestureList.qml  InfoCard.qml  qmldir
tests/: test_bridge.py  test_engine.py  test_hands.py  test_main.py  test_models.py  test_renderer.py  test_utils.py
ui/: dashboard.py
